--- a/src/index/Todo.scss
+++ b/src/index/Todo.scss
@@ -41,6 +41,12 @@
   margin: auto;
   margin-bottom: 2px;
 }
+.next-prev-buttons-empty{
+  width: 30px;
+  display: block;
+  margin: auto;
+  margin-bottom: 2px;
+}
 .next-prev-buttons:hover{
   cursor: pointer;
 }
